blueprint/kafka/strimzi/install/drain-cleaner/kubernetes/000-Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: strimzi-drain-cleaner
  labels:
    app: strimzi-drain-cleaner
