blueprint/kafka/strimzi/install/drain-cleaner/kubernetes/050-Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: strimzi-drain-cleaner
  labels:
    app: strimzi-drain-cleaner
  namespace: strimzi-drain-cleaner
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 8080
    - port: 443
      name: https
      protocol: TCP
      targetPort: 8443
  selector:
    app: strimzi-drain-cleaner
