blueprint/kafka/strimzi/install/drain-cleaner/kubernetes/070-ValidatingWebhookConfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: strimzi-drain-cleaner
  labels:
    app: strimzi-drain-cleaner
webhooks:
  - name: strimzi-drain-cleaner.strimzi.io
    rules:
      - apiGroups:   [""]
        apiVersions: ["v1"]
        operations:  ["CREATE"]
        resources:   ["pods/eviction"]
        scope:       "Namespaced"
    clientConfig:
      service:
        namespace: "strimzi-drain-cleaner"
        name: "strimzi-drain-cleaner"
        path: /drainer
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURqRENDQW5TZ0F3SUJBZ0lVWktIOTA4QThkbklEeCtZMDh4d3ljWE81RG9Fd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1hqRUxNQWtHQTFVRUJoTUNRMW94RHpBTkJnTlZCQWNUQmxCeVlXZDFaVEVlTUJ3R0ExVUVDaE1WVTNSeQphVzE2YVNCRWNtRnBiaUJEYkdWaGJtVnlNUjR3SEFZRFZRUURFeFZUZEhKcGJYcHBSSEpoYVc1RGJHVmhibVZ5ClEwRXdIaGNOTWpFd01USXpNakF6TkRBd1doY05Nall3TVRJeU1qQXpOREF3V2pCZU1Rc3dDUVlEVlFRR0V3SkQKV2pFUE1BMEdBMVVFQnhNR1VISmhaM1ZsTVI0d0hBWURWUVFLRXhWVGRISnBiWHBwSUVSeVlXbHVJRU5zWldGdQpaWEl4SGpBY0Jn [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    failurePolicy: Ignore
    timeoutSeconds: 5
